Fix MacViewsBrowser build.

r443407 changed the WebInputEvent class so that its "type" member variable is
accessed via a getter. However, its usage in browser_frame_mac.mm was not
updated. This CL changes the code to use the getter, hence fixing the
MacViewsBrowser build.

BUG=681452

Review-Url: https://codereview.chromium.org/2632863004
Cr-Commit-Position: refs/heads/master@{#444259}

Former-commit-id: c41a037768a53c4b60be748debba0347a8c10580